add flaps/spoilers levers to mk2inline

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2InlineInternal.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2InlineInternal.cfg
@@ -533,52 +533,17 @@ INTERNAL
 	}
 	PROP
 	{
-		name = pb_GPWS_ON-OFF-SH01-B6-C2
-		position = -0.0300002247,0.549450815,-0.66875881
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.5,0.5,0.5
+		name = ASET_SpoilersLever
+		position = -0.0627002418,0.545504212,-0.667322218
+		rotation = 0.57357645,0,-2.66665029E-06,0.819152117
+		scale = 0.400000006,0.400000036,0.400000036
 	}
 	PROP
 	{
-		name = pb_WARN_HIGH_G_ON-OFF-FT-B2
-		position = -2.27899633E-07,0.548792899,-0.668519497
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.5,0.5,0.5
-	}
-	PROP
-	{
-		name = pb_WARN_SLOPE_ON-OFF-FT-B2
-		position = -0.0600003339,0.515434027,-0.656377614
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.5,0.5,0.5
-	}
-	PROP
-	{
-		name = pb_WARN_TUMBLE_ON-OFF-FT-B2
-		position = -3.36496129E-07,0.515433788,-0.656377792
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.5,0.5,0.5
-	}
-	PROP
-	{
-		name = pb_AVAS_ON-OFF-FT-B2
-		position = -0.0300003365,0.515433908,-0.656377673
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.5,0.5,0.5
-	}
-	PROP
-	{
-		name = ASET_ALT_WARN_Dial
-		position = -0.0600001626,0.567527592,-0.67406106
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.5,0.299999952,0.5
-	}
-	PROP
-	{
-		name = DigitalIndicator_ALT_WARN_SetupDisplay
-		position = -0.060000252,0.541847706,-0.666842759
-		rotation = 0.57357645,8.49758089E-14,-2.66665029E-06,0.819152117
-		scale = 0.300000012,0.300000161,0.300000161
+		name = ASET_FlapsCtrl
+		position = -0.0203002039,0.549486995,-0.661642075
+		rotation = 0.57357645,0,-2.66665029E-06,0.819152117
+		scale = 0.300000012,0.400000036,0.400000036
 	}
 	PROP
 	{
@@ -754,6 +719,62 @@ INTERNAL
 		position = 0.127700001,0.103,-0.677699983
 		rotation = 0,0,0,1
 		scale = 0.699999988,0.699999988,0.699999988
+	}
+	PROP
+	{
+		name = pb_GPWS_ON-OFF-SH01-B6-C2
+		position = 0.0167999994,0.424108654,-0.592328727
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = pb_WARN_HIGH_G_ON-OFF-FT-B2
+		position = 0.0467999987,0.423981786,-0.591640353
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = pb_WARN_SLOPE_ON-OFF-FT-B2
+		position = -0.0131999999,0.417547554,-0.556728244
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = pb_WARN_TUMBLE_ON-OFF-FT-B2
+		position = 0.0467999987,0.417547554,-0.556728303
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = pb_AVAS_ON-OFF-FT-B2
+		position = 0.0167999994,0.417547554,-0.556728244
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.5,0.5,0.5
+	}
+	PROP
+	{
+		name = ASET_ALT_WARN_Dial
+		position = -0.0458499976,0.422588259,-0.577458024
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.5,0.299999923,0.5
+	}
+	PROP
+	{
+		name = DigitalIndicator_ALT_WARN_SetupDisplay
+		position = -0.0458499976,0.415800184,-0.551661074
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 0.300000012,0.300000131,0.300000131
+	}
+	PROP
+	{
+		name = Primitive_BOX_Beveled_LightGray
+		position = -0.00340000167,0.371269524,-0.601355135
+		rotation = 0.0910005867,0,0,0.995850861
+		scale = 1.59436071,1,1
 	}
 }
 
