add flaps/spoilers to sock shuttle

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_sock_shuttle.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_sock_shuttle.cfg
@@ -6,7 +6,7 @@
 	}
 	%MODULE[RasterPropMonitorComputer]
 	{
-		%storedStrings =      v 1.6.5|03.30.2023|  OV-100 Cockpit | OV-100 ||KSA-OV|OV| KSA, JSI, A.S.E.T. & Benjee10
+		%storedStrings = v 1.6.5|03.30.2023|  OV-100 Cockpit | OV-100 ||KSA-OV|OV| KSA, JSI, A.S.E.T. & Benjee10
 		%triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 }
@@ -326,6 +326,20 @@ INTERNAL
 		position = -0.500999987,0.243000001,1.52100003
 		rotation = 0,0,0,1
 		scale = 1,1,1
+	}
+	PROP
+	{
+		name = ASET_FlapsCtrl
+		position = -0.628499985,0.408100009,0.747600019
+		rotation = 0.0046497169,0,-0.33856827,0.940930367
+		scale = 0.400000036,0.400000006,0.399999976
+	}
+	PROP
+	{
+		name = ASET_SpoilersLever
+		position = -0.669799984,0.432200015,0.749300003
+		rotation = 0.0046497169,0,-0.33856827,0.940930367
+		scale = 0.400000036,0.400000006,0.399999946
 	}
 	PROP
 	{
@@ -1471,7 +1485,7 @@ INTERNAL
 	PROP
 	{
 		name = ASET_RecoveryBeacon
-		position = -0.641345084,0.415612668,0.682700038
+		position = -0.628096163,0.406642437,0.577900052
 		rotation = 0.0373602696,0.121819712,-0.290816128,0.948256433
 		scale = -0.700000048,0.699999988,0.700000048
 	}
