fix reviva config for bdb lm

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
@@ -1002,17 +1002,13 @@ INTERNAL
 				}
 				DATA
 				{
-					internalName = Lunar
+					internalName = Lunar2
 				}
 			}
 		}
 	}
-	MODULE
-	{
-		name = ModuleIVASwitch
-		internalName = Lunar
-	}
 }
+
 @PART[bluedog_LM_Ascent_Cockpit]:AFTER[zzz_Reviva]
 {
 	@MODULE[ModuleB9PartSwitch]:HAS[#moduleID[IVASwitch]]
@@ -1039,6 +1035,15 @@ INTERNAL
 				}
 			}
 		}
+	}
+}
+// reviva contains an incorrect compatibility patch that removes the ModuleIVASwitch.  So if it's missing, put it back
+@PART[bluedog_LM_Ascent_Cockpit]:HAS[!MODULE[ModuleIVASwitch]]:NEEDS[Reviva]:FINAL
+{
+	MODULE
+	{
+		name = ModuleIVASwitch
+		internalName = Lunar2
 	}
 }
 @PART[bluedog_LM_Ascent_Cockpit]:NEEDS[!Reviva]:FOR[KSA]
