fix light switch in bdb lm

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_lm.cfg
@@ -962,7 +962,7 @@ INTERNAL
 		// change the internal light name
 		@MODULE[JSIActionGroupSwitch]
 		{
-			@internalLightName = Area Light|Area Light (1)
+			@internalLightName = Point Light
 		}
 	}
 }
