change the aset yoke to the kerbalvr one in mission control and landercan

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2LanderCan.cfg
@@ -890,7 +890,7 @@ INTERNAL
 	}
 	PROP
 	{
-		name = ASET_Yoke_V01
+		name = KerbalVR_SteeringYoke
 		position = 0.272599995,-0.974300146,-0.0264998674
 		rotation = -0.707106829,0,0,0.707106829
 		scale = 1,1,1
