--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_MissionControl.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_MissionControl.cfg
@@ -532,7 +532,7 @@ INTERNAL
 	}
 	PROP
 	{
-		name = ASET_Yoke_V01
+		name = KerbalVR_SteeringYoke
 		position = 0.747499943,0.274200022,-1.49530005
 		rotation = 0,0.707106829,0,-0.707106829
 		scale = 0.999999881,1.00000012,1
