add freeiva support to bdb cm part

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_bdb_kp0110.cfg
@@ -1,3 +1,11 @@
+@PART:HAS[@INTERNAL[KSA_bdb_apollo]&!MODULE[ModuleFreeIva]]:NEEDS[FreeIva]:FOR[KSA]
+{
+    MODULE
+    {
+        name = ModuleFreeIva
+    }
+}
+
 INTERNAL:NEEDS[Bluedog_DB,ASET]
 {
 	name = KSA_bdb_apollo
