use new scifi_yoke prop in landercan and PCR

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_MissionControl.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_MissionControl.cfg
@@ -532,8 +532,8 @@ INTERNAL
 	}
 	PROP
 	{
-		name = KerbalVR_SteeringYoke
-		position = 0.747499943,0.274200022,-1.49530005
+		name = SciFi_Yoke
+		position = 0.773399949,0.0198999941,-1.49530005
 		rotation = 0,0.707106829,0,-0.707106829
 		scale = 0.999999881,1.00000012,1
 	}
