--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2LanderCan.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_mk2LanderCan.cfg
@@ -890,8 +890,8 @@ INTERNAL
 	}
 	PROP
 	{
-		name = KerbalVR_SteeringYoke
-		position = 0.272599995,-0.974300146,-0.0264998674
+		name = SciFi_Yoke
+		position = 0.272599995,-1.00709999,0.227500007
 		rotation = -0.707106829,0,0,0.707106829
 		scale = 1,1,1
 	}
