fix seats in ack orion

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
@@ -7,34 +7,6 @@ INTERNAL
 	}
 	MODULE
 	{
-		name = InternalSeat
-		seatTransformName = seatTransform1
-		allowCrewHelmet = false
-		displayseatName = Seat 1
-	}
-	MODULE
-	{
-		name = InternalSeat
-		seatTransformName = seatTransform2
-		allowCrewHelmet = false
-		displayseatName = Seat 2
-	}
-	MODULE
-	{
-		name = InternalSeat
-		seatTransformName = seatTransform3
-		allowCrewHelmet = false
-		displayseatName = Seat 3
-	}
-	MODULE
-	{
-		name = InternalSeat
-		seatTransformName = seatTransform4
-		allowCrewHelmet = false
-		displayseatName = Seat 4
-	}
-	MODULE
-	{
 		name = InternalCameraSwitch
 		colliderTransformName = window1_collider
 		cameraTransformName = window1_camera
@@ -156,14 +128,14 @@ INTERNAL
 	PROP
 	{
 		name = htProps_seat_Orion2
-		position = 0.290965945,-0.676191449,-0.0334281325
+		position = 0.290965945,-0.79,-0.0334281325
 		rotation = 0,0,0,1
 		scale = 1,1,1
 	}
 	PROP
 	{
 		name = htProps_seat_Orion2
-		position = -0.290965915,-0.676191449,-0.0334281325
+		position = -0.290965915,-0.79,-0.0334281325
 		rotation = 0,0,0,1
 		scale = 1,1,1
 	}
@@ -397,6 +369,20 @@ INTERNAL
 		position = 0.00606000004,0.679500103,-0.514480114
 		rotation = 0,-0.495765299,0,0.868456602
 		scale = 0.0999999866,0.100000009,0.100000001
+	}
+}
+
+// change seats to the version with modules
+@INTERNAL[KSA_ack_orion]
+{
+	@PROP[htProps_seat_Orion1],*
+	{
+		@name = htProps_seat_Orion1_wModule
+	}
+
+	@PROP[htProps_seat_Orion2],*
+	{
+		@name = htProps_seat_Orion2_wModule
 	}
 }
 
