--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
@@ -239,13 +239,6 @@ INTERNAL
 	}
 	PROP
 	{
-		name = ABORTbuttonV2
-		position = -0.0817999989,0.390800118,-0.411300123
-		rotation = 0.707106829,0,0,0.707106829
-		scale = 0.699999988,0.699999809,0.699999809
-	}
-	PROP
-	{
 		name = ARRT
 		position = -0.478799999,0.422800124,-0.38560015
 		rotation = 0.707106829,0,0,0.707106829
@@ -370,6 +363,20 @@ INTERNAL
 		rotation = 0,-0.495765299,0,0.868456602
 		scale = 0.0999999866,0.100000009,0.100000001
 	}
+	PROP
+	{
+		name = ASET_RecoveryBeacon
+		position = -0.85589999,0.483800471,-0.182900012
+		rotation = 0.170643196,0.875629187,-0.0875764117,0.443266213
+		scale = 0.64999944,0.650000036,0.649999619
+	}
+	PROP
+	{
+		name = tggl_ABORT_T1-G3-B15-C1Y-S
+		position = -0.0785000026,0.38590011,-0.411301166
+		rotation = 0.707106829,0,0,0.707106829
+		scale = 0.600000024,0.600000024,0.600000024
+	}
 }
 
 // change seats to the version with modules
@@ -445,7 +452,8 @@ INTERNAL
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
-
+		storedStrings = v 1.6.7 |11.08.2023|OR-C 'Odyssey'||||KSA, Benjee10, Mirage, A.S.E.T.
+		triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 
 	@INTERNAL
@@ -476,6 +484,8 @@ INTERNAL
 					internalName = KSA_ack_orion
 					RasterPropMonitorComputer
 					{
+						storedStrings = v 1.6.7 |11.08.2023|OR-C 'Odyssey'||||KSA, Benjee10, Mirage, A.S.E.T.
+						triggeredEvents = ALCOR_CALLRECOVERYTEAM
 					}
 				}
 			}
