update ACK props and storedstrings

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
@@ -452,7 +452,7 @@ INTERNAL
 {
 	%MODULE[RasterPropMonitorComputer]
 	{
-		storedStrings = v 1.6.7 |11.08.2023|OR-C 'Odyssey'||||KSA, Benjee10, Mirage, A.S.E.T.
+		storedStrings = v 1.6.7 |     KSA, Benjee10, Mirage, A.S.E.T.|  OR-C 'Odyssey'||||
 		triggeredEvents = ALCOR_CALLRECOVERYTEAM
 	}
 
@@ -484,7 +484,7 @@ INTERNAL
 					internalName = KSA_ack_orion
 					RasterPropMonitorComputer
 					{
-						storedStrings = v 1.6.7 |11.08.2023|OR-C 'Odyssey'||||KSA, Benjee10, Mirage, A.S.E.T.
+						storedStrings = v 1.6.7 |     KSA, Benjee10, Mirage, A.S.E.T.|  OR-C 'Odyssey'||||
 						triggeredEvents = ALCOR_CALLRECOVERYTEAM
 					}
 				}
