hook up ack light switches

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_hls.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_hls.cfg
@@ -171,7 +171,7 @@ INTERNAL
 	}
 	PROP
 	{
-		name = pb_PANEL_LIGHT-FD4
+		name = CockpitBackLightSwitch
 		position = -0.1017,0.809874892,-0.607158959
 		rotation = 6.45132232E-08,0.170581475,-0.985343575,2.73371199E-07
 		scale = 0.700000226,0.69999975,0.699999928
@@ -189,6 +189,13 @@ INTERNAL
 		position = -0.0600999966,0.810648084,-0.609325171
 		rotation = 6.45132232E-08,0.170581475,-0.985343575,2.73371199E-07
 		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CockpitLightSwitch
+		position = 0.167499989,0.82480067,-0.648975015
+		rotation = 6.45132303E-08,0.17058152,-0.985343575,2.73371199E-07
+		scale = 0.700000286,0.699999809,0.699999928
 	}
 	PROP
 	{
@@ -546,6 +553,23 @@ INTERNAL
 		position = 0.475499988,0.855000019,-0.738900006
 		rotation = -0.599931419,-0.374275744,0.374275744,0.599931419
 		scale = 0.100000009,0.100000001,0.0999998972
+	}
+}
+
+@INTERNAL[KSA_ack_hls]
+{
+	@PROP[CockpitLightSwitch]:NEEDS[ASET]
+	{
+		@name = KSA_CockpitLightSwitch
+
+		// copy the module from the prop definition
+		#@PROP[CockpitLightSwitch]/MODULE[JSIActionGroupSwitch] {}
+
+		// change the internal light name
+		@MODULE[JSIActionGroupSwitch]
+		{
+			@internalLightName = Point Light (1)
+		}
 	}
 }
 
