--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
@@ -377,6 +377,20 @@ INTERNAL
 		rotation = 0.707106829,0,0,0.707106829
 		scale = 0.600000024,0.600000024,0.600000024
 	}
+	PROP
+	{
+		name = CockpitBackLightSwitch
+		position = 0.134215623,0.667100132,-0.411800086
+		rotation = 0.707106888,0,0,0.707106769
+		scale = 0.649999976,0.649999797,0.649999797
+	}
+	PROP
+	{
+		name = CockpitLightSwitch
+		position = -0.149200007,0.667000115,-0.411800086
+		rotation = 0.707106888,0,0,0.707106769
+		scale = 0.649999976,0.649999738,0.649999738
+	}
 }
 
 // change seats to the version with modules
@@ -390,6 +404,20 @@ INTERNAL
 	@PROP[htProps_seat_Orion2],*
 	{
 		@name = htProps_seat_Orion2_wModule
+	}
+
+	@PROP[CockpitLightSwitch]:NEEDS[ASET]
+	{
+		@name = KSA_CockpitLightSwitch
+
+		// copy the module from the prop definition
+		#@PROP[CockpitLightSwitch]/MODULE[JSIActionGroupSwitch] {}
+
+		// change the internal light name
+		@MODULE[JSIActionGroupSwitch]
+		{
+			@internalLightName = Point Light
+		}
 	}
 }
 
