make light switches a little bigger

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
@@ -382,14 +382,14 @@ INTERNAL
 		name = CockpitBackLightSwitch
 		position = 0.134215623,0.667100132,-0.411800086
 		rotation = 0.707106888,0,0,0.707106769
-		scale = 0.649999976,0.649999797,0.649999797
+		scale = 0.8, 0.8, 0.8
 	}
 	PROP
 	{
 		name = CockpitLightSwitch
 		position = -0.149200007,0.667000115,-0.411800086
 		rotation = 0.707106888,0,0,0.707106769
-		scale = 0.649999976,0.649999738,0.649999738
+		scale = 0.8, 0.8, 0.8
 	}
 }
 
