fix deletion patches for ACK when it's not installed

--- a/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
+++ b/GameData/KSA/IVAUpgrade/Spaces/KSA_ack_orion.cfg
@@ -466,4 +466,4 @@ INTERNAL
 	}
 }
 
-!INTERNAL[benjee10_orion_Capsule]:NEEDS[!Benjee10_Orion] {}
+!INTERNAL[KSA_ack_orion]:NEEDS[!Benjee10_Orion] {}
